--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,6 +1,9 @@
 @import url(./__logo/header__logo.css);
+@import url(./__link/header__link.css);
 
 .header {
+  display: flex;
+  justify-content: space-between;
   width: 100%;
   max-width: 882px;
   margin: auto;
