--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -1,3 +1,14 @@
 .header__link {
-  margin: 45px 0 40.6px 2px;
+  margin: 45px 0 46px 2px;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 22px;
+  color: #ffffff;
+  text-decoration: none;
+  padding: 0;
+}
+
+.header__link:hover {
+  cursor: pointer;
+  opacity: 0.6;
 }
