--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,5 +1,8 @@
 @import url(./__logo/header__logo.css);
+@import url(./__button/header__button.css);
 @import url(./__link/header__link.css);
+@import url(./__user-info/header__user-info.css);
+@import url(./__email/header__email.css);
 
 .header {
   display: flex;
